[tool.poetry]
name = "trybe-python-exercises"
version = "0.1.0"
description = ""
authors = ["Bruno Davi <48166556+brunodavi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
